ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-02-12 Christian Hernmarck
	- DISTS:
		openSuSE10 (10.3):
		* improved package list (smaller), repositories - with howto
		* corrected the config & Makefile to for openSuSE 10.3 - should also fit to 10.2

2008-02-11 Christian Hernmarck
	- ENGINE:
		* Added: use utf8 with the database depending on the config variable,
		* Added: charset & collation utf8 for ispcp database creation in database.sql
	- GUI:
		* Fixed: small error in client/add_mail_acc.tpl: tooltip on help symbol
		* Fixed: function "clean_input" now don't htmlencode by default

2008-02-08 Benedikt Heintel
	- SETUP:
		* Fixed: serveral errors on Upgrade process

2008-02-07 Benedikt Heintel
	- DISTS:
		CentOS / Slackware:
		* Fixed #760: ispcp_daemon not working under Slackware 12.0 or CentOS 5
		* Fixed #900: /tmp/ispcp-1.0.0/etc/ispcp empty after make install on CentOS 5
		* Added: Slackware documentation
	- DOCU:
		* Updated Debian, CentOS, Slackware

2008-02-07 Christian Hernmarck
	- GUI:
		* Added: use utf8 with the database, including config var to switch off

2008-02-06 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC3

2008-02-05 Benedikt Heintel
	- GUI:
		* Fixed: Graphical issue on reseller/order.php
	- LANGUAGES:
		* Updated: Turkish
		* Updated all languages

2008-02-04 Benedikt Heintel
	- SETUP:
		* Fixed #976: handeled duplicate entries on unique key on update from VHCS
		* Updated: Improved SQL handling for updated versions

2008-02-03 Benedikt Heintel
	- GUI:
		* Added: New look and feel of SQL handling (created by macbishop)

2008-02-03 Christian Hernmarck
	- SETUP:
		* Fixed #983: New FasCGT Changes break the start of Apache
	- GUI:
		* Small fix in default header/footer for orders made them html compliant...

2008-02-02 Benedikt Heintel
	- SETUP:
		* Fixed #981: bind fails

2008-01-27 Benedikt Heintel
	- SETUP:
		* Fixed #926: VHCS 2.4.71 update no apache config
		* Fixed #966: Updatescripts fails Update RC2x -> RC3
