@@ -62,7 +62,7 @@ Make sure you are logged in as root.
 	# cd ./ispcp-omega-1.0.0-rc4
 
 3. Install the required modules
-   first update your system:
+   First update your system:
 	# apt-get update && apt-get upgrade
 
    for Debian Sarge please use:
@@ -90,6 +90,13 @@ Make sure you are logged in as root.
 	already on screen. Select 'no' to force sync updates.)
 	(when you get to the proftpd screen, select 'standalone')
 	(when you get to the rootkithunter screen, select two time 'yes')
+
+	Now install needed Perl modules:
+
+	# cpan
+	cpan> install FindBin
+	cpan> install Net::LibIDN
+	cpan> quit
 
 4. (optional) Check the ispcp.conf and adapt it to your requirements.
    An overview over the variables you can find in the FAQ on
